<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                                   tools:context="org.mujeeb.mosquemanager.HomeActivity"
                                                   tools:showIn="@layout/activity_home">

    <ScrollView
        android:id="@+id/scrContentScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="340dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="340dp"
                    android:layout_margin="8dp">

                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="340dp"></WebView>

                </androidx.cardview.widget.CardView>

            </ScrollView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnUpdateHijriAdjustment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_update_hijri_adjustment"
                        android:textAllCaps="false"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/btnUpdateNamazTimes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_update_namaz_times"
                        android:textAllCaps="false"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnUpdateOccasions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_update_occasions"
                        android:textAllCaps="false"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/btnRefreshClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_refresh_clock"
                        android:textAllCaps="false"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnScreenSaver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_enable_screen_saver"
                        android:textAllCaps="false"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center_horizontal|center_vertical"/>

                    <Button
                        android:id="@+id/btnUpdateScreenSaverSchedule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_update_screen_saver_schedule"
                        android:textAllCaps="false"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center_horizontal|center_vertical"/>

                </LinearLayout>


            </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rltLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
