<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                                   tools:context="org.mujeeb.mosquemanager.LoginActivity"
                                                   tools:showIn="@layout/activity_login">

    <ScrollView
        android:id="@+id/scrContentScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLoginMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:text="@string/txt_login_to_continue"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/editUserId"
            android:hint="@string/txt_user_id"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/defaultTextColor"
            android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/editPassword"
            android:hint="@string/txt_password"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/defaultTextColor"
            android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:text="@string/button_login"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/whiteTextColor"
            android:textAllCaps="false"/>

    </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rltLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
