<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="org.mujeeb.mosquemanager.UpdateNamazTimesActivity">

    <ScrollView
        android:id="@+id/scrContentScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCardBackground"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center_horizontal|center_vertical"
                        android:textColor="@color/defaultTextColor"
                        android:text="@string/txt_enter_hijri_adjustment"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="20dp">

                        <EditText
                            android:id="@+id/editHijriAdjustment"
                            android:hint="@string/txt_hijri_adjustment"
                            style="@android:style/Widget.DeviceDefault.EditText"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:ems="10"
                            android:inputType="numberSigned"
                            android:textColor="@color/defaultTextColor"
                            android:maxLength="2" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:text="@string/button_cancel"/>

                        <Button
                            android:id="@+id/btnUpdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginLeft="15dp"
                            android:text="@string/button_update"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rltLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
