<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="org.mujeeb.mosquemanager.UpdateNamazTimesActivity">

    <ScrollView
        android:id="@+id/scrContentScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCardBackground"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spnNamazTimeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center_horizontal|center_vertical"
                        android:textColor="@color/defaultTextColor"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginTop="20dp">

                            <EditText
                                android:id="@+id/editHours"
                                android:hint="@string/txt_hours"
                                style="@android:style/Widget.DeviceDefault.EditText"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal|center_vertical"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:ems="10"
                                android:inputType="number"
                                android:textColor="@color/defaultTextColor"
                                android:maxLength="2" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/txt_colon"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginTop="20dp">

                            <EditText
                                android:id="@+id/editMinutes"
                                android:hint="@string/txt_minutes"
                                style="@android:style/Widget.DeviceDefault.EditText"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal|center_vertical"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:ems="10"
                                android:inputType="number"
                                android:textColor="@color/defaultTextColor"
                                android:maxLength="2" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:text="@string/button_cancel"/>

                        <Button
                            android:id="@+id/btnUpdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginLeft="15dp"
                            android:text="@string/button_update"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rltLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
